# building-llm-applications-from-scratch

./: pyproject.toml
Module 1/: Module_1_Foundation_LLM_Maven_v2_module_1.ipynb
Module 2/: Module_2_basic_llms.ipynb  nlp_module_1.ipynb
