[project]
name = "building-llm-applications-from-scratch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "nltk==3.8.1",
    "numpy>=2.3.5",
    "pip>=25.3",
    "pytorch-transformers>=1.2.0",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
